# OOPSZI

ЛР 1/: CMakeLists.txt
ЛР 1/lab1/: CMakeLists.txt  task1.c  task2.c  task3.c  task4.c  task5_func.c  task5_main.c  task6_func.c  task6_main.c  task7_func.c  task7_func.h  task7_main.c
ЛР2/: CMakeLists.txt
ЛР2/lab2/: CMakeLists.txt  main.c
ЛР3/: CMakeLists.txt
ЛР3/lab3/: CMakeLists.txt  task1.c  task2.c  task3.c
ЛР4/: CMakeLists.txt
ЛР4/lab4/: CMakeLists.txt  Complex.cpp  Complex.h  lab4.cpp  lab4.h
