# CMakeList.txt : CMake project for lab3, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (task1 "task1.c")
add_executable (task2 "task2.c")
add_executable (task3 "task3.c")

# TODO: Add tests and install targets if needed.
